# Wrapd-Terminal

./: .gitignore  CLAUDE.md  DEVELOPMENT_JOURNAL.md  LICENSE  README.md  analyze_warp_docs.py  build.sh  build_linux.sh  build_macos.sh  build_windows.bat  crawl_log.txt  crawl_warp_docs.py  install_shortcut.sh  local_launcher.py  pyproject.toml  replace_warp_agent.py  requirements.txt  warp_docs_analysis.json  warp_docs_summary.md  wrapd.sh
resources/themes/: dark.css  nin_contrast.css  nin_dark.css  nin_light.css  nin_pastel.css  rocko_contrast.css  rocko_dark.css  rocko_light.css  rocko_pastel.css  sesame_contrast.css  sesame_dark.css  sesame_light.css  sesame_pastel.css  tmnt_contrast.css  tmnt_dark.css  tmnt_light.css  tmnt_pastel.css  warp_glass.css  wutang_contrast.css  wutang_dark.css  wutang_light.css  wutang_pastel.css
src/: __init__.py  main.py  simplified_main.py
src/core/: __init__.py  command_processor.py  config_manager.py  llm_interface.py
src/gui/: model_dialog.py  settings_dialog.py  terminal_widget.py
src/utils/: logger.py
src/wrapd/: main.py
src/wrapd/api/: ollama_api.py  openrouter_api.py
src/wrapd/core/: config_manager.py
src/wrapd/gui/: __init__.py  enhanced_model_dialog.py  main_window.py  model_card.py  model_comparison.py  model_search.py  settings_dialog.py  terminal_widget.py  theme_manager.py
src/wrapd/models/: __init__.py  model_filter.py  model_info.py  model_repository.py
src/wrapd/utils/: __init__.py  error_handling.py  logger.py  retry_logic.py
warp_docs/: agents.md  community.md  crawl_summary.json  getting-started.md  index.md  knowledge-and-collaboration.md  privacy.md  support-and-billing.md  terminal.md
warp_docs/_gitbook/: image.md
warp_docs/agents/: active-ai.md  generate.md  voice.md  warp-ai.md
warp_docs/agents/warp-ai/: agent-mode.md
warp_docs/appearance/: custom-themes.md  input-position.md  tabs-behavior.md  text-fonts-cursor.md  themes.md
warp_docs/community/: refer-a-friend.md  warp-preview-and-alpha-program.md
warp_docs/features/: files-and-links.md  keyboard-shortcuts.md  prompt.md  settings-sync.md  teams.md
warp_docs/features/command-completions/: autosuggestions.md  completions.md
warp_docs/features/editor/: vim.md
warp_docs/features/windows/: split-panes.md
warp_docs/getting-started/: changelog.md  keyboard-shortcuts.md  migrate-to-warp.md  using-warp-with-shells.md  what-is-warp.md
warp_docs/knowledge-and-collaboration/: mcp.md  rules.md  session-sharing.md  teams.md  warp-drive.md
warp_docs/knowledge-and-collaboration/warp-drive/: notebooks.md  prompts.md  warp-drive-on-the-web.md  workflows.md
warp_docs/privacy/: network-log.md  privacy.md  secret-redaction.md
warp_docs/support-and-billing/: known-issues.md  licenses.md  plans-and-pricing.md  sending-us-feedback.md  troubleshooting-login-issues.md  uninstalling-warp.md  updating-warp.md  using-warp-offline.md
warp_docs/terminal/: appearance.md  blocks.md  command-completions.md  comparisons.md  editor.md  entry.md  integrations-and-plugins.md  more-features.md  sessions.md  warpify.md  windows.md
warp_docs/terminal/appearance/: app-icons.md  blocks-behavior.md  custom-themes.md  input-position.md  pane-dimming.md  prompt.md  size-opacity-blurring.md  tabs-behavior.md  text-fonts-cursor.md  themes.md
warp_docs/terminal/blocks/: background-blocks.md  block-actions.md  block-basics.md  block-filtering.md  block-sharing.md  find.md  sticky-command-header.md
warp_docs/terminal/command-completions/: autosuggestions.md  completions.md
warp_docs/terminal/comparisons/: performance.md  terminal-features.md
warp_docs/terminal/editor/: alias-expansion.md  command-inspector.md  vim.md
warp_docs/terminal/entry/: command-corrections.md  command-history.md  command-search.md  synchronized-inputs.md  yaml-workflows.md
warp_docs/terminal/more-features/: accessibility.md  files-and-links.md  full-screen-apps.md  linux.md  markdown-viewer.md  notifications.md  quit-warning.md  settings-sync.md  smart-select.md  uri-scheme.md  working-directory.md
warp_docs/terminal/sessions/: launch-configurations.md  session-navigation.md  session-restoration.md
warp_docs/terminal/warpify/: ssh-legacy.md  ssh.md  subshells.md
warp_docs/terminal/windows/: global-hotkey.md  split-panes.md  tabs.md
